--- a/gradle/wrapper/gradle-wrapper的副本.properties
+++ b/gradle/wrapper/gradle-wrapper的副本.properties
@@ -1,6 +1,6 @@
-#Thu Nov 03 23:58:18 CST 2016
+#Mon May 23 14:02:50 PDT 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.14.1-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-bin.zip
